--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,4 +1,5 @@
 .page__container {
   max-width: 1280px;
   margin: 0 auto;
+  overflow: hidden;
 }
